# AI_Trip_Planner

./: .env.example  .env.name  .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.aws/: task-definition.json
.devcontainer/: devcontainer.json
.github/workflows/: aws.yml  ci.yml
.streamlit/: config.toml
agent/: agentic_workflow.py
config/: config.yaml
notebook/: experiments.ipynb
prompt_library/: prompt.py
tests/unit/: test_calculator.py
tools/: arithmetic_op_tool.py  currency_conversion_tool.py  expense_calculator_tool.py  place_search_tool.py  weather_info_tool.py
utils/: config_loader.py  currency_converter.py  expense_calculator.py  model_loader.py  place_info_search.py  save_to_document.py  weather_info.py
