[project]
name = "AI-TRAVEL-PLANNER"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "fastapi",
    "python-dotenv",
    "streamlit",
    "uvicorn",
    "pydantic",
    "requests",
    "langchain_tavily",
    "langchain_groq",
    "langchain_openai",
    "langgraph",
    "langchain-google-community[places]",
    "pytest"
]
